# nqx

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/: make_binary_package.sh
src/etc/: nqx.sh
src/etc/config/: config.json  packages.json
src/etc/config/clusters/: cholesky.json  jean-zay.json
src/etc/config/projects/: cpu.txt  gpu.txt
src/nqx/: __about__.py  __init__.py  k__main__.py
src/nqx/cli/: __init__.py  __main__.py  activate.py  app.py  config.py  create.py  hook.py  list.py  setup.py
src/nqx/core/: __init__.py  env_config.py
src/nqx/providers/: __init__.py
src/nqx/providers/modules/: __init__.py
src/nqx/providers/python/: __init__.py  modules.py  system.py
src/nqx/settings/: __init__.py  settings.py
src/nqx/setup/: uv.py
src/nqx/utils/: __init__.py  execute.py  import_files.py  path.py
tests/: __init__.py
