[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nqx"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Filippo Vicentini", email = "filippovicentini@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich>=11.2.0",
  "typer>=0.4.0",
  "pygments>=2.10.0",
]

[project.urls]
Documentation = "https://github.com/unknown/nqx#readme"
Issues = "https://github.com/unknown/nqx/issues"
Source = "https://github.com/unknown/nqx"

[project.scripts]
nqx = "nqx.cli:main"
nqx_exe = "nqx.cli:main"

[tool.hatch.version]
path = "src/nqx/__about__.py"

[tool.hatch.build.targets.binary]
scripts = ["nqx", "nqx_exe"]

[tool.hatch.build.targets.wheel.force-include]
"src/etc" = "etc"


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nqx tests}"

[tool.coverage.run]
source_pkgs = ["nqx", "tests"]
branch = true
parallel = true
omit = [
  "src/nqx/__about__.py",
]

[tool.coverage.paths]
nqx = ["src/nqx", "*/nqx/src/nqx"]
tests = ["tests", "*/nqx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
